[tool.poetry]
name = "irs-search"
version = "0.1.0"
description = ""
authors = ["Brendan Welzien <brendanwelzien@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.0.9"
pandas = "^1.2.3"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
